# claude-agent-kit

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
claude-rules/: claude-agent-kit--aside.md  claude-agent-kit--framework-conventions.md  claude-agent-kit--git-workflow.md  claude-agent-kit--parallel-work.md  claude-agent-kit--task-execution.md  framework-conventions.md  git-workflow.md  parallel-work.md  task-execution.md
mcp-servers/aside/: Cargo.toml
mcp-servers/aside/src/: backend.rs  lenient.rs  main.rs  params.rs  transcript.rs
mcp-servers/workslate/: Cargo.toml
mcp-servers/workslate/src/: buffer.rs  file.rs  lenient.rs  main.rs  task.rs
scripts/: claude-agent-kit--aside-prefs.md.tmpl  configure-aside.sh
