[package]
name = "aside"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
